apps/connectivity/emqx/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
spec:
  rules:
    - host: emqx.mobrockers.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: emqx-dashboard
                port:
                  name: dashboard
            pathType: Prefix
  tls:
    - hosts:
        - emqx.mobrockers.com
